@@ -3,12 +3,13 @@
 <h1>TI-Status</h1>
 
 <%= turbo_frame_tag 'ti_lagebild_failed', refresh: 'morph' do %>
-  <% @tids.each do |tid,count| %>
-    <%= render partial: 'tid', 
-               locals: { tid: tid, count: count, 
-                         product: SinglePicture.failed.where(tid: tid).first&.product } %>
+  <% @failures.each do |fail,count| %>
+    <%= render partial: 'failure', 
+               locals: { pdt: fail[0], tid: fail[1], count: count, 
+                         product: SinglePicture.failed.where(tid: fail[1], pdt: fail[0])
+                                  .first&.product } %>
   <% end %>
-  <% if @tids.empty? %>
+  <% if @failures.empty? %>
   <div>
     Keine Störung vorhanden
   </div>
