@@ -211,6 +211,12 @@
 <li>
 <p>Neu: Hintergrundjob für die automatische PIN-Verifizierung (nur unterstützte Terminals). SMC-B Auto-PIN-Mode muss hierfür am Kartenterminal gleich <code>Automatisch</code> sein. <a href="admin/card-terminal-edit.html" class="xref page">Mehr zur automatischen PIN-Verifizierung</a></p>
 </li>
+<li>
+<p>Neu: Einzelne Einträge des TI-Lagebildes können gemutet werden, um nicht relevante Einträge aus dem Gesamtstatus herauszunehmen</p>
+</li>
+<li>
+<p>Fix: TI-Lagebild: die Anzeige der fehlerhaften Dienste korrigiert.</p>
+</li>
 </ul>
 </div>
 </div>
