@@ -4,6 +4,8 @@
 
 * Workflow für die PIN-Verifizierung aller Karten eines Terminals verbessert.
 * Neu: Hintergrundjob für die automatische PIN-Verifizierung (nur unterstützte Terminals). SMC-B Auto-PIN-Mode muss hierfür am Kartenterminal gleich `Automatisch` sein. xref:admin/card-terminal-edit.adoc[Mehr zur automatischen PIN-Verifizierung]
+* Neu: Einzelne Einträge des TI-Lagebildes können gemutet werden, um nicht relevante Einträge aus dem Gesamtstatus herauszunehmen
+* Fix: TI-Lagebild: die Anzeige der fehlerhaften Dienste korrigiert.
 
 == 0.6.2 - 2025-01-11
 
